--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 
 <body>
     <div id="header"></div>
-    <div>
+    <div id="first">
         <h1>Logitech</h1>
         <p>Logitech es una marca muy popular por sus periféricos, principalmete ratones, teclados, altavoces y cascos. </p>
         <h3>Esta marca tiene dos secciones, la sección de oficina y la gamer.</h3>
-        <img id="raton" src="img/ratón_barato.jpg" alt="">
+        <h2>OFICINA</h2>
+        <p>Este ratón es para oficina, ya que són muy baratos y un poco mas silencioso que los gamers.</p>
+        <img class="raton_oficina" src="img/ratón_barato.jpg" alt="">
+        <br>
+        <p>Estos teclados se suelen utilizar para trabajos de oficina, ya que son muy poco ruidosos y suelen durar bastante, son miy baratos.</p>
+        <img class="teclado_oficina" src="img/teclado_barato.jpg" alt="">
+        <a id="amazon_teclado_oficina" href="https://www.amazon.es/Logitech-K120-Business-Teclado-conectividad/dp/B0056C7W1C/ref=pd_sbs_3/260-1726942-0958007?pd_rd_w=9rXyM&pf_rd_p=bead054f-de1a-4d92-98b9-04253f60cdcd&pf_rd_r=D3E1BVQK388CQ70SHATH&pd_rd_r=4a53e115-0227-456c-966d-f6ed50507cbc&p">Comprar</a>
+        <p>Los cascos de oficina són muy finos y muy feos, lo suelen utilizar en las oficinas de telecomunicaciones.</p>
+        <img class="cascos_barato" src="img/cascos_barato.jpg" alt="">
+        <a id="comprar_cascos_baratos" href="https://www.logitech.com/es-es/products/headsets/h111-stereo-headset.981-000593.html">Comprar</a>
+        <h2 id="gamer">GAMER</h2>
+        <img class="raton_gamer" src="img/logitech_g_pro.jpg" alt="">
+        <a id="comprar_raton_gamer" href="https://www.logitechg.com/es-es/products/gaming-mice/pro-wireless-mouse.910-005273.html">Comprar</a>
+
     </div>
 </body>
 
