--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <h2 id="gamer">GAMER</h2>
         <img class="raton_gamer" src="img/logitech_g_pro.jpg" alt="">
         <a id="comprar_raton_gamer" href="https://www.logitechg.com/es-es/products/gaming-mice/pro-wireless-mouse.910-005273.html">Comprar</a>
-
+        <img class="teclado_gamer" src="img/teclado_gamer.jpg" alt="">
+        <a id="comprar_teclado_gamer" href="https://www.logitechg.com/es-es/products/gaming-keyboards/pro-mechanical-gaming-keyboard.html">Comprar</a>
+        <img class="cascos_gamer" src="img/cascos_gamer.jpg" alt="">
+        <a id="comprar_cascos_gamer" href="https://www.logitechg.com/es-es/products/gaming-audio/pro-x-gaming-headset-blue-voice-mic-tech.html">Comprar</a>
+        <p id="parrafo_final">Esta és una de las mejores marcas para el gaming en mi opinion, las características de los productos són bastante buenas, pero a cambio de buenas características el precio es elevado.</p>
     </div>
 </body>
 
